--- a/index.css
+++ b/index.css
@@ -1,3 +1,104 @@
 body {
     margin: 0;
 }
+
+.container {
+    width: 100%;
+    height: 729px;
+    left: 76px;
+    top: 126px;
+    text-align: center;
+    background: #F4F4F4;
+}
+
+.main-section {
+    padding-top: 10px;
+    width: 100%;
+    height: 300px;
+    background: #6943FF;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.heading {
+    font-family: 'Inter', sans-serif;
+    font-weight: 800;
+    font-style: normal;
+    text-align: center;
+    line-height: 38px;
+    letter-spacing: -0.03em;
+    color: #FFFFFF;
+
+}
+
+.number-field {
+    box-sizing: border-box;
+    width: 120px;
+    height: 85px;
+    border: 2px solid #B295FF;
+    border-radius: 5px;
+    background: #6943FF;
+    margin: 30px auto 0;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 60px;
+    line-height: 24px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.convert-btn {
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: #3D3D3D;
+    margin-top: 20px;
+    width: 117px;
+    height: 42px;
+    left: 217px;
+    top: 209px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+    border: none;
+}
+
+.values-box {
+    width: 90%;
+    height: 108.57px;
+    left: 25px;
+    top: 321px;
+    background: #FFFFFF;
+    border-radius: 4.68077px 0px 0px 0px;
+    margin: 15px auto;
+}
+
+.values-box h3 {
+    padding-top: 20px;
+    margin: auto;
+    width: 500px;
+    height: 25px;
+    left: 77px;
+    top: 31px;
+    font-family: 'Inter' sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 23px;
+    line-height: 20px;
+    color: #5A537B;
+
+}
+
+.values-box p {
+    font-family: 'inter', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #353535;
+
+}
